--- a/custom.css
+++ b/custom.css
@@ -176,8 +176,8 @@
   }
   .logopag{
       padding: 0;
-      width: 320px; /* Largura 100% */
-      height: 70px; /* Altura 100% */
+      width: 90px; /* Largura 100% */
+      height: 80px; /* Altura 100% */
   }
   /* Estilos para a lista de carros */
   .car-list {
@@ -193,7 +193,7 @@
       border-radius: 15px;
       padding: 20px;
       margin: 10px;
-      width: 450px;
+      width: 100%;
       text-align: center;
       background-color: #ccc;
   
@@ -385,7 +385,7 @@
   }
   
   .art-home img {
-    max-width: 100%;
+    width: 100%;
     height: auto;
   }
   
