--- a/custom.css
+++ b/custom.css
@@ -453,5 +453,5 @@
             margin: 0;
             margin-left: 5px;
             overflow: hidden;
-            position: absolute;
+            position: inherit;
   }
