--- a/custom.css
+++ b/custom.css
@@ -193,7 +193,7 @@
       border-radius: 15px;
       padding: 20px;
       margin: 10px;
-      width: 100%;
+     /* width: 100%; */
       text-align: center;
       background-color: #ccc;
   
