--- a/custom.css
+++ b/custom.css
@@ -520,7 +520,7 @@
   }
 
   .containeranuncio {
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -534,6 +534,7 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     width: 400px;
     text-align: center;
+    margin: 50px;
 }
 
 .formulario-quadro h2 {
