--- a/custom.css
+++ b/custom.css
@@ -190,7 +190,7 @@
     border: 2px solid #000000;
     border-radius: 15px;
     padding: 20px;
-    margin: 7px;
+    margin: 34px;
     text-align: center;
     background-color: #ccc;
   }
@@ -280,7 +280,7 @@
     border-radius: 5px;
     padding: 5px;
     margin: 10px;
-    width: 450px;
+   /* width: 450px; */
     text-align: center;
   }
   
@@ -567,4 +567,45 @@ button {
 
 button:hover {
     background-color: #0056b3;
+}
+
+.h2det {
+  font-size: 25px;
+
+}
+.h6det {
+  font-size: 16px;
+}
+
+.subtela, .subtelaconsulta {
+  text-align: center;
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(40, 29, 29, 0.5);
+  z-index: 999;
+}
+.subtela-conteudo,
+.inputuser,.subtela-conteudoconsulta {
+  position: absolute;
+  color: #1a2a39;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #d6d6d6;
+  padding: 20px;
+  border-radius: 6px;
+  box-shadow: 0 0 10px rgba(239, 237, 237, 0.5);
+  max-width: 80%;
+ /* max-height: 500px;*/
+  overflow: auto ;
+  background-color: none;
+  border: none;
+  border-bottom: 1px solid white;
+  outline: none;
+  font-size: 15px;
+ /*letter-spacing: 2px;*/
 }
