--- a/custom.css
+++ b/custom.css
@@ -526,7 +526,7 @@
     display: grid;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+   /* height: 100vh;*/
     background-color: #f2f2f2;
 }
 
