--- a/custom.css
+++ b/custom.css
@@ -199,7 +199,8 @@
   }
   
   .product img {
-    max-width: 100%;
+    width: 100%;
+    height: auto;
    /* height: 300px;*/
     object-fit: cover;
   }
