--- a/custom.css
+++ b/custom.css
@@ -11,7 +11,7 @@
       align-items: center;
       margin: 0px;
       border: 10px;
-      background-color: black;
+      background-color: white;
     } 
   /* Basic styling */
   * {
