--- a/custom.css
+++ b/custom.css
@@ -635,3 +635,28 @@ button:hover {
     visibility: visible;
     /* Outras propriedades de estilo, como largura, altura, cor de fundo, etc. */
 }
+
+.container {
+  text-align: center;
+}
+
+.botao-compra {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 8px;
+}
+
+.botao-compra:hover {
+  background-color: white;
+  color: #4CAF50;
+  border: 2px solid #4CAF50;
+}
