--- a/custom.css
+++ b/custom.css
@@ -636,7 +636,7 @@ button:hover {
     /* Outras propriedades de estilo, como largura, altura, cor de fundo, etc. */
 }
 
-.container {
+.container1 {
   text-align: center;
 }
 
