--- a/custom.css
+++ b/custom.css
@@ -638,6 +638,11 @@ button:hover {
 
 .container1 {
   text-align: center;
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
 }
 
 .botao-compra {
