--- a/custom.css
+++ b/custom.css
@@ -639,7 +639,8 @@ button:hover {
 .container1 {
   text-align: center;
   display: flex;
-    
+    justify-content: center;
+    align-items: center;
     height: 100vh;
     margin: 0;
 }
