--- a/custom.css
+++ b/custom.css
@@ -529,7 +529,7 @@
     justify-content: center;
     align-items: center;
    /* height: 100vh;*/
-    background-color: #c20808;
+    background-color: #ccc;
 }
 
 .formulario-quadro {
